Ensure scrollbars

--- a/geem/templates/geem/conversion/index.css
+++ b/geem/templates/geem/conversion/index.css
@@ -3,6 +3,17 @@ body {font-family: Arial, Helvetica, sans-serif}
 h1 {text-align:center;
   margin:30px auto}
 
+/* Forces scrollbar to always show */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
 .panel {border-bottom:1px dotted blue;
   width:40%;}
 
